tests/errors/validate_ret_type.err
Type Error: Invalid return type for function: expected `int` but got `list<char>`
1: fn foo() -> int {
                   ^
